--- a/login/login.html
+++ b/login/login.html
@@ -7,6 +7,7 @@
     <title>Ford: Login</title>
     <link rel="stylesheet" href="login.css">
     <script src="login.js" defer></script>
+    <script src="../cadastro/pagina_login.js" defer></script>
     <link rel="shortcut icon" href="../imgs/inicial/faviconFord.webp" type="image/x-icon">
 </head>
 
@@ -19,10 +20,10 @@
             <h3>ENTRAR</h3>
             <label for=""></label>
             <input id="login_nome" type="text" placeholder="Nome de Usuário">
-            <span id="avisoLoginNome">*Informe seu nome.</span>
+            <span id="avisoLoginNome">*Nome incorreto.</span>
             <label for=""></label>
             <input id="login_senha" type="password" placeholder="Senha">
-            <span id="avisoLoginSenha">*Digite sua senha.</span>
+            <span id="avisoLoginSenha">*Senha incorreta.</span>
             <button id="botaoEntrar">Entrar</button>
             <div id="linha"></div>
             <div id="divCriarConta">
