--- a/veiculos/rangerRaptor/rangerRaptor.html
+++ b/veiculos/rangerRaptor/rangerRaptor.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova Geração Ranger</title>
+    <title>Ranger Raptor</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../../imgs/inicial/faviconFord.webp" type="image/x-icon">
-    <script src="../script/script.js" defer></script>
+    <script src="rangerRaptor.js" defer></script>
 </head>
 <header>
     <div id="divHeader">
@@ -169,7 +169,7 @@
 </header>
 <body>
     <div id="divSlider">
-        <img src="imgs/novaGen.jpg" alt="" id="imgSlider">
+        <img src="imgs/rangerRaptor.jpg" alt="" id="imgSlider">
 
         <div id="divLocalizarConcessionaria">
             <i class="fa-solid fa-location-dot fa-xl" id="localizar"></i>
@@ -181,8 +181,8 @@
             <button class="botoesSlider" id="botaoProximo">></button>
         </div>
         <div id="infoSlider">
-            <h1>Nova Geração Ranger</h1>
-            <h2>R$234.990</h2>
+            <h1>Ranger Raptor</h1>
+            <h2>R$466.500,00</h2>
         </div>
     </div>
 
@@ -226,12 +226,12 @@
             <h2 id="nomeCor">Branco Artico</h2>
         </div>
 
-        <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/fbr-nova-ranger-limited-colorizer-branco-artico.jpg.dam.full.high.jpg/1687393695829.jpg" id="imgCorVeiculo">
+        <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/colorizer-mayo/colorizer/branco-nevasca/fbr-ranger-raptor-colorizer-preto-asturiafbr-ranger-raptor-colorizer-branco-nevasca.jpg.dam.full.high.jpg/1717518172761.jpg" id="imgCorVeiculo">
 
         <div id="coresDisponiveis">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/btn-branco-artico.png.dam.full.high.png/1687393695793.png" alt="" id="branco">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/vermelho-bari/btn-vermelho-bari.jpg.dam.full.high.jpg/1687393699743.jpg" alt="" id="vermelho">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/laranja-jalapao/btn-laranja-jalapao.png.dam.full.high.png/1687393703767.png" alt="" id="laranja">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/colorizer-mayo/colorizer/preto-asturia/btn-preto-asturia.png.dam.full.high.png/1717518168501.png" alt="" id="preto">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-territory/overview/v2/colorizer/azul-metalico/btn-azul-metalico.png.dam.full.high.png/1711983675629.png" alt="" id="azul">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/cinza-moscou/btn-cinza-moscou.png.dam.full.high.png/1687393707722.png" alt="" id="cinza">
         </div>
     </div>
@@ -242,27 +242,27 @@
 
     <div id="detalhesVeiculos">
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem/image.imgs.full.high.jpg/1694704274482.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/ranger-raptor-content/2024/media-carousels/overview-cards/jcr:content/par/mediacarouselitem_62381348/image.imgs.full.high.jpg" alt="">
             <h1>DESIGN</h1>
-            <h3>A Nova Geração Ford Ranger apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
+            <h3>A Nova Ford Ranger Raptor apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_1528869907/image.imgs.full.high.jpg/1694704540467.jpg" alt="">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/gallery/overlay/fbr-ranger-raptor-galeria-overlay-amortecedores.jpg" alt="">
             <h1>PERFORMANCE</h1>
-            <h3>O motor 3.0 V6 de 250cv e 600Nm. da Nova Geração Ford Ranger garante um melhor desempenho e eficiência no consumo de combustível.</h3>
+            <h3>O motor 3.0 V6 Bi-turbo de 397cv da Nova Ford Ranger Raptor garante um melhor desempenho e eficiência no consumo de combustível.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_601442681/image.imgs.full.high.jpg/1694704605653.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/ranger-raptor-content/2024/media-carousels/overview-cards/jcr:content/par/mediacarouselitem_601442681/image.imgs.full.high.jpg" alt="">
             <h1>CONECTIVIDADE</h1>
             <h3>Trazendo mais conforto ao usuário, o Sync deixa tudo mais dinâmico, com integrações com o Waze, Spotify e muitos outros apps.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_274109040/image.imgs.full.high.jpg/1694704627321.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/ranger-raptor-content/2024/media-carousels/overview-cards/jcr:content/par/mediacarouselitem_274109040/image.imgs.full.high.jpg" alt="">
             <h1>SEGURANÇA</h1>
-            <h3>Com a Nova Geração Ford Ranger asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
+            <h3>Com a Nova Ford Ranger Raptor asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
         </div>
     </div>
 </body>
