--- a/home.html
+++ b/home.html
@@ -29,54 +29,53 @@
 
                         <div id="divSuv" class="divVeiculos">
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-territory/showroom/fbr-territory-showroom.png.dam.full.high.png/1693228444884.png" alt="" class="imgVeiculos">
+                                <a href="veiculos/territory/territory.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-territory/showroom/fbr-territory-showroom.png.dam.full.high.png/1693228444884.png" alt="" class="imgVeiculos"></a>
                                 <h2>Novo Territory</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/bronco-sport/showroom/fbr-showroom-bronco.jpg.dam.full.high.jpg/1690303977561.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/bronco/bronco.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/bronco-sport/showroom/fbr-showroom-bronco.jpg.dam.full.high.jpg/1690303977561.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Bronco Sport</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/mustangMach/mustangMach.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Mustang Mach-E</h2>
                             </div>
                         </div>
 
                         <div id="divPicapes" class="divVeiculos">
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/showroom/fbr-showroom-ranger-p703-v2.png.dam.full.high.png/1691681133806.png" alt="" class="imgVeiculos">
+                                <a href="veiculos/genRanger/genRanger.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/showroom/fbr-showroom-ranger-p703-v2.png.dam.full.high.png/1691681133806.png" alt="" class="imgVeiculos"></a>
                                 <h2>Nova Geração Ranger</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/showroom/fbr-showroom-ranger-raptor.jpg.dam.full.high.jpg/1700832163575.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/rangerRaptor/rangerRaptor.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/showroom/fbr-showroom-ranger-raptor.jpg.dam.full.high.jpg/1700832163575.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Ranger Raptor</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/models/fx4/fbr-showroom-maverick.jpg.dam.full.high.jpg/1712867686782.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/maverick/maverick.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/models/fx4/fbr-showroom-maverick.jpg.dam.full.high.jpg/1712867686782.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Maverick</h2>
                             </div>
 
                             <div class="divCadaItem">
                                 <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/models/hybrid/fbr-showroom-maverick%20hibrida.jpg.dam.full.high.jpg/1712867691940.jpg" alt="" class="imgVeiculos">
-                                <h2>Maverick Híbrido</h2>
+                                <h2>Maverick Hybrid</h2>
                             </div>
                         </div>
 
 
                         <div id="divEletricos" class="divVeiculos">
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/maverick/models/lariat-hybrid/showroom/fbr-showroom-maverick-hibrida.jpg.dam.full.high.jpg/1695245564147.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/maverickHybrid/maverickHybrid.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/maverick/models/lariat-hybrid/showroom/fbr-showroom-maverick-hibrida.jpg.dam.full.high.jpg/1695245564147.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Maverick Hybrid</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
-                                <h2>Mustang Mach-E
-                                </h2>
+                                <a href="veiculos/mustangMach/mustangMach.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos"></a>
+                                <h2>Mustang Mach-E</h2>
                             </div>
 
                             <div class="divCadaItem">
@@ -98,12 +97,12 @@
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/mustangMach/mustangMach.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Mustang Mach-E</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/showroom/fbr-showroom-ranger-raptor.jpg.dam.full.high.jpg/1700832163448.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/rangerRaptor/rangerRaptor.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/showroom/fbr-showroom-ranger-raptor.jpg.dam.full.high.jpg/1700832163448.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Ranger Raptor</h2>
                             </div>
                         </div>
@@ -153,12 +152,13 @@
         <nav id="navLogin">
             <div class="dropdownAll" id="dropdownLogin">
                 
-                <button class="botoesHeader" id="botaoLogin"><i class="fa-regular fa-circle-user fa-xl"></i></button>
+                <button class="botoesHeader"><i class="fa-regular fa-circle-user fa-xl"></i></button>
                 <h3 id="usuarioLogado"></h3>
                 <div class="dropdownLoginAll">
                     <div id="dropdownBotoesLogin">
-                        <a href="login/login.html"><button class="botoesLogin">Log-in</button></a>
-                        <a href="cadastro/pagina_login.html"><button class="botoesLogin">Cadastrar-se</button></a>
+                        <a href="login/login.html"><button class="botoesLogin" id="botaoLogin">Log-in</button></a>
+                        <a href="cadastro/pagina_login.html"><button class="botoesLogin" id="botaoCadastro">Cadastrar-se</button></a>
+
                     </div>
                 </div>
             </div>
