--- a/login/login.html
+++ b/login/login.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ford: Login</title>
     <link rel="stylesheet" href="login.css">
     <script src="login.js" defer></script>
+    <script src="../cadastro/pagina_login.js" defer></script>
     <link rel="shortcut icon" href="../imgs/inicial/faviconFord.webp" type="image/x-icon">
 </head>
+
 <body>
     <div id="container">
-        <img src="https://prodb2cuicontentdelivery-d0bbevfjaxfmedda.z01.azurefd.net/b2cui/assets/images/ford-logo.svg" alt="">
+        <img src="https://prodb2cuicontentdelivery-d0bbevfjaxfmedda.z01.azurefd.net/b2cui/assets/images/ford-logo.svg"
+            alt="">
         <div id="divLogin">
-            
+
             <h3>ENTRAR</h3>
             <label for=""></label>
-            <input type="text" placeholder="Nome de Usuário">
+            <input id="login_nome" type="text" placeholder="Nome de Usuário">
+            <span id="avisoLoginNome">*Nome incorreto.</span>
             <label for=""></label>
-            <input type="text" placeholder="Senha">
-            <button>Entrar</button>
+            <input id="login_senha" type="password" placeholder="Senha">
+            <span id="avisoLoginSenha">*Senha incorreta.</span>
+            <button id="botaoEntrar">Entrar</button>
             <div id="linha"></div>
             <div id="divCriarConta">
                 <h3>Não tem uma conta?</h3>
-                <a href="../area_cadastro/pagina_cadastro.html"><button>Criar Conta</button></a>
+                <a href="../cadastro/pagina_login.html"><button>Criar Conta</button></a>
             </div>
         </div>
 
     </div>
-    
+
 </body>
+
 </html>
